[gd_scene load_steps=12 format=2]

[ext_resource path="res://Maze.gd" type="Script" id=1]
[ext_resource path="res://assets/tilesets/Maze.tres" type="TileSet" id=2]
[ext_resource path="res://Map.gd" type="Script" id=3]
[ext_resource path="res://assets/arts/player.png" type="Texture" id=4]
[ext_resource path="res://Player.gd" type="Script" id=5]
[ext_resource path="res://assets/fonts/retro_gaming.tres" type="DynamicFontData" id=6]
[ext_resource path="res://TransitionScreen.gd" type="Script" id=7]

[sub_resource type="DynamicFont" id=1]
size = 42
font_data = ExtResource( 6 )

[sub_resource type="DynamicFont" id=2]
size = 32
font_data = ExtResource( 6 )

[sub_resource type="DynamicFont" id=3]
size = 32
font_data = ExtResource( 6 )

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 1, 1 )

[node name="Maze" type="Node2D"]
script = ExtResource( 1 )

[node name="TransitionScreen" type="CanvasLayer" parent="."]
script = ExtResource( 7 )

[node name="Curtain" type="ColorRect" parent="TransitionScreen"]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LabelMain" type="Label" parent="TransitionScreen"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -97.0
margin_top = -27.0
margin_right = 97.0
margin_bottom = 27.0
custom_fonts/font = SubResource( 1 )
text = "Level 0"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LabelContinue" type="Label" parent="TransitionScreen"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -245.0
margin_top = 123.5
margin_right = 245.0
margin_bottom = 164.5
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 1, 1, 0, 1 )
text = "Press space to continue"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LabelTimer" type="Label" parent="TransitionScreen"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -82.0
margin_top = -180.5
margin_right = 82.0
margin_bottom = -139.5
custom_fonts/font = SubResource( 3 )
text = "00:00:00"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Background" type="CanvasLayer" parent="."]
layer = -1

[node name="ColorRect" type="ColorRect" parent="Background"]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.0627451, 0.0627451, 0.0627451, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Map" type="TileMap" parent="."]
tile_set = ExtResource( 2 )
cell_size = Vector2( 16, 16 )
cell_tile_origin = 1
collision_layer = 4
collision_mask = 0
format = 1
script = ExtResource( 3 )

[node name="Camera" type="Camera2D" parent="."]
current = true
drag_margin_left = 0.0
drag_margin_top = 0.0
drag_margin_right = 0.0
drag_margin_bottom = 0.0

[node name="Player" type="Node2D" parent="."]
script = ExtResource( 5 )
__meta__ = {
"_edit_group_": true
}

[node name="Sprite" type="Sprite" parent="Player"]
texture = ExtResource( 4 )
centered = false

[node name="Area2D" type="Area2D" parent="Player"]
position = Vector2( 8, 8 )
collision_mask = 6

[node name="CollisionShape2D" type="CollisionShape2D" parent="Player/Area2D"]
shape = SubResource( 4 )
[connection signal="area_entered" from="Player/Area2D" to="." method="_on_Player_area_entered"]
[connection signal="body_entered" from="Player/Area2D" to="." method="_on_Player_body_entered"]
